Fixed main layout issues for medium view.. onto large view

--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,10 @@ a:visited {
   color: lightcoral;
 }
 
+.footer-nav a:hover {
+  color: lightcoral;
+}
+
 
 /**********  Float Clearfix  ********/
 
@@ -113,7 +117,8 @@ a:visited {
 
    #portfolio-heading {
      padding: 35px 0;
-     margin-bottom: 0;
+     margin: 0 2.5% 0;
+     background: white;
    }
 
   .main-header {
@@ -124,7 +129,7 @@ a:visited {
     text-align: center;
     margin-left: 2.5%;
     margin-right: 2.5%;
-    padding-bottom: 35px;
+    padding-bottom: 25px;
     font-size: 1.13rem;
   }
 
@@ -178,7 +183,6 @@ a:visited {
    padding-bottom: 26px;
  }
 
-
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
@@ -195,11 +199,14 @@ a:visited {
 
   .main-nav ul {
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+
   }
 
   .main-nav li {
     display: inline;
-    padding: 0 25px;
+    padding: 0 2%;
   }
 
   .main-nav {
@@ -207,12 +214,18 @@ a:visited {
   }
 
   .main-header {
-    padding-bottom: 45px;
+    padding-bottom: 5px;
+  }
+
+  .main-intro {
+    padding-bottom: 35px;
+    margin: 0 3%;
   }
 
   .intro {
     text-align: left;
     font-size: 1.4rem;
+    padding-right: 10px;
   }
 
   #profile-img {
@@ -228,20 +241,23 @@ a:visited {
   }
 
   .container {
-    height: 1257px;
+    margin: 0;
+    padding: 0 3%;
   }
 
   #portfolio-heading {
-    padding: 2% 0;
+    margin: 0;
+    padding: 3% 0;
+    background: white;
   }
 
   .card {
     float: left;
-    height: 30.17%;
-    width: 47%;
+    width: 50%;
+    height: 410px;
     overflow: hidden;
     word-wrap: break-word;
-    padding-bottom: 3%;
+    padding: 0 1% 3%;
 
   }
 
@@ -253,17 +269,24 @@ a:visited {
     margin: 0 25% 0 25%;
   }
 
+  .footer-info {
+    position: relative;
+  }
+
   .footer-nav {
     padding-bottom: 30px;
   }
 
   .footer-nav ul {
     margin: 8px 3% 20px;
+    position: absolute;
+    right: -24px;
   }
 
   .footer-nav li {
-    padding: 0 20px;
+    padding: 0 0 0 20px;
     display: inline-block;
+    font-weight: bold;
   }
 
   .footer-name {
@@ -275,5 +298,23 @@ a:visited {
   #to-top {
     display: none;
   }
+
+}
+
+@media (min-width: 1024px)  {
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 }
